fixed touch issue for calendar on mobile devices

--- a/main.css
+++ b/main.css
@@ -291,7 +291,6 @@ background-color: #F8BBD0 ;
 }
 
 #scheduler {
-  
   font-family:'Overpass', Sans-Serif;
   font-size: 21px;
   text-align: center justify;
@@ -301,12 +300,11 @@ background-color: #F8BBD0 ;
 
 #createEvent {
   display:inline-block;
-  padding: 20px 20px 20px 10px;
-  text-align: center;
+  margin-left: 40px;
 }
 #timeSlot {
   display:inline-block;
-  padding: 0 20px 0 10px;
+  margin: 0 0 10px 0px;
 }
 #timeSlot label {
   display: inline-block;
@@ -319,6 +317,7 @@ background-color: #F8BBD0 ;
   border-radius: 6px ;
   background-color: white;
   font-size: 21px;
+  max-width: 60%;
 }
 .modal {
   position: fixed;
@@ -334,7 +333,7 @@ background-color: #F8BBD0 ;
 .modalContent {
   width: 480px;
   max-width: 100%;
-  height: 120px;
+  height: 160px;
   max-height: 100%;
   display:block;
   background-color: white;
@@ -342,17 +341,18 @@ background-color: #F8BBD0 ;
   border: 1px solid #880E4F;
   border-radius: 12px;
   z-index: 4;
+  margin-top: 10px;
 }
 .modalContent h3 {
   text-align: center;
-  margin: 0;
 }
 .hidden {
   display:none;
 }
 .close {
-margin: 0;
-padding: 0;
+margin-top: 0px;
+margin-right: 5px;
+padding: 0px;
 float: right;
 font-weight: bold;
 font-size: 25px;
